# python_linters_configs

./: pyproject.toml  ruff.toml
