[tool.mypy]
exclude = ".venv"
python_version = "3.12"

check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
extra_checks = true
follow_imports = "normal"
ignore_missing_imports = false
local_partial_types = true
no_implicit_optional = true
no_implicit_reexport = true
show_error_codes = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
# allure is not type annotated
module = ["allure", "docker"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# PyHamcrest has a lot of incorrect type annotations
module = ["hamcrest"]
follow_imports = "skip"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
mypy = "^1.13.0"
ruff = "^0.8.0"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"
