[tool.mypy]
exclude = ".venv"
python_version = "3.13"

follow_imports = "normal"
ignore_missing_imports = false
show_error_codes = true
strict = true
warn_unreachable = true

[[tool.mypy.overrides]]
# allure is not type annotated
module = ["allure", "docker"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# PyHamcrest has a lot of incorrect type annotations
module = ["hamcrest"]
follow_imports = "skip"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
mypy = "^1.13.0"
ruff = "^0.9.0"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"
