[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.9.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
exclude = ".venv"
python_version = "3.13"

follow_imports = "normal"
ignore_missing_imports = false
show_error_codes = true
strict = true
warn_unreachable = true

[[tool.mypy.overrides]]
# allure is not type annotated
module = ["allure", "docker"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# PyHamcrest has a lot of incorrect type annotations
module = ["hamcrest"]
follow_imports = "skip"
